@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /home/xubuntu/berlios_backup/github/tmp-cvs/jverein/Repository/jverein/src/de/jost_net/JVerein/io/Reporter.java,v $
- * $Revision: 1.16 $
- * $Date: 2010/10/15 09:58:29 $
+ * $Revision: 1.17 $
+ * $Date: 2011/02/12 09:40:16 $
  * $Author: jost $
  *
  * Copyright (c) by Heiner Jostkleigrewe
@@ -9,7 +9,10 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log: Reporter.java,v $
- * Revision 1.16  2010/10/15 09:58:29  jost
+ * Revision 1.17  2011/02/12 09:40:16  jost
+ * Statische Codeanalyse mit Findbugs
+ *
+ * Revision 1.16  2010-10-15 09:58:29  jost
  * Code aufgeräumt
  *
  * Revision 1.15  2010-09-07 16:59:57  jost
@@ -88,6 +91,7 @@ import com.lowagie.text.pdf.PdfWriter;
 
 import de.jost_net.JVerein.Einstellungen;
 import de.jost_net.JVerein.JVereinPlugin;
+import de.jost_net.JVerein.util.JVDateFormatTTMMJJJJ;
 import de.willuhn.jameica.plugin.AbstractPlugin;
 import de.willuhn.jameica.system.Application;
 import de.willuhn.util.ProgressMonitor;
@@ -148,7 +152,7 @@ public class Reporter
     rpt.addTitle(subtitle);
 
     Chunk fuss = new Chunk(title + " | " + subtitle + " | erstellt am "
-        + Einstellungen.DATEFORMAT.format(new Date()) + "     Seite: ",
+        + new JVDateFormatTTMMJJJJ().format(new Date()) + "     Seite: ",
         FontFactory.getFont(FontFactory.HELVETICA, 8, Font.BOLD));
     HeaderFooter hf = new HeaderFooter(new Phrase(fuss), true);
     hf.setAlignment(Element.ALIGN_CENTER);
@@ -206,7 +210,7 @@ public class Reporter
   public void addHeaderColumn(String text, int align, int width, Color color)
   {
     headers.add(getDetailCell(text, align, color));
-    widths.add(new Integer(width));
+    widths.add(Integer.valueOf(width));
   }
 
   /**
@@ -332,9 +336,9 @@ public class Reporter
    * Erzeugt den Tabellen-Header.
    * 
    * @param tabellenbreiteinprozent
-   *        Breite der Tabelle in Prozent
+   *          Breite der Tabelle in Prozent
    * @param alignment
-   *        Horizontale Ausrichtung der Tabelle (siehe com.lowagie.Element.)
+   *          Horizontale Ausrichtung der Tabelle (siehe com.lowagie.Element.)
    * @throws DocumentException
    */
   public void createHeader(float tabellenbreiteinprozent, int alignment)
@@ -410,11 +414,11 @@ public class Reporter
    * Erzeugt eine Zelle der Tabelle.
    * 
    * @param text
-   *        der anzuzeigende Text.
+   *          der anzuzeigende Text.
    * @param align
-   *        die Ausrichtung.
+   *          die Ausrichtung.
    * @param backgroundcolor
-   *        die Hintergundfarbe.
+   *          die Hintergundfarbe.
    * @return die erzeugte Zelle.
    */
   private PdfPCell getDetailCell(String text, int align, Color backgroundcolor)
@@ -442,9 +446,9 @@ public class Reporter
    * Erzeugt eine Zelle der Tabelle.
    * 
    * @param text
-   *        der anzuzeigende Text.
+   *          der anzuzeigende Text.
    * @param align
-   *        die Ausrichtung.
+   *          die Ausrichtung.
    * @return die erzeugte Zelle.
    */
   private PdfPCell getDetailCell(String text, int align)
@@ -456,7 +460,7 @@ public class Reporter
    * Erzeugt eine Zelle fuer die uebergebene Zahl.
    * 
    * @param value
-   *        die Zahl.
+   *          die Zahl.
    * @return die erzeugte Zelle.
    */
   private PdfPCell getDetailCell(double value)
@@ -481,7 +485,7 @@ public class Reporter
    * Erzeugt eine Zelle fuer das uebergebene Datum.
    * 
    * @param value
-   *        das Datum.
+   *          das Datum.
    * @return die erzeugte Zelle.
    */
   private PdfPCell getDetailCell(Date value, int align)
@@ -498,7 +502,7 @@ public class Reporter
    * Gibt einen Leerstring aus, falls der Text null ist.
    * 
    * @param text
-   *        der Text.
+   *          der Text.
    * @return der Text oder Leerstring - niemals null.
    */
   public String notNull(String text)
