@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /home/xubuntu/berlios_backup/github/tmp-cvs/jverein/Repository/jverein/src/de/jost_net/JVerein/server/ArbeitseinsatzImpl.java,v $
- * $Revision: 1.1 $
- * $Date: 2010/11/17 04:52:25 $
+ * $Revision: 1.2 $
+ * $Date: 2011/02/12 09:42:33 $
  * $Author: jost $
  *
  * Copyright (c) by Heiner Jostkleigrewe
@@ -9,7 +9,10 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log: ArbeitseinsatzImpl.java,v $
- * Revision 1.1  2010/11/17 04:52:25  jost
+ * Revision 1.2  2011/02/12 09:42:33  jost
+ * Statische Codeanalyse mit Findbugs
+ *
+ * Revision 1.1  2010-11-17 04:52:25  jost
  * Erster Code zum Thema Arbeitseinsatz
  *
  **********************************************************************/
@@ -99,7 +102,7 @@ public class ArbeitseinsatzImpl extends AbstractDBObject implements
 
   public void setMitglied(int mitglied) throws RemoteException
   {
-    setAttribute("mitglied", new Integer(mitglied));
+    setAttribute("mitglied", Integer.valueOf(mitglied));
   }
 
   public Date getDatum() throws RemoteException
