@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /home/xubuntu/berlios_backup/github/tmp-cvs/jverein/Repository/jverein/src/de/jost_net/JVerein/server/BuchungsklasseImpl.java,v $
- * $Revision: 1.3 $
- * $Date: 2010/11/13 09:29:39 $
+ * $Revision: 1.4 $
+ * $Date: 2011/02/12 09:42:33 $
  * $Author: jost $
  *
  * Copyright (c) by Heiner Jostkleigrewe
@@ -9,7 +9,10 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log: BuchungsklasseImpl.java,v $
- * Revision 1.3  2010/11/13 09:29:39  jost
+ * Revision 1.4  2011/02/12 09:42:33  jost
+ * Statische Codeanalyse mit Findbugs
+ *
+ * Revision 1.3  2010-11-13 09:29:39  jost
  * Warnings entfernt.
  *
  * Revision 1.2  2010-10-15 09:58:27  jost
@@ -88,7 +91,7 @@ public class BuchungsklasseImpl extends AbstractDBObject implements
     insertCheck();
   }
 
-   @Override
+  @Override
   protected Class<?> getForeignObject(String arg0)
   {
     return null;
@@ -114,7 +117,7 @@ public class BuchungsklasseImpl extends AbstractDBObject implements
 
   public void setNummer(int i) throws RemoteException
   {
-    setAttribute("nummer", new Integer(i));
+    setAttribute("nummer", Integer.valueOf(i));
   }
 
   @Override
