@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /home/xubuntu/berlios_backup/github/tmp-cvs/jverein/Repository/jverein/src/de/jost_net/JVerein/server/LehrgangImpl.java,v $
- * $Revision: 1.3 $
- * $Date: 2010/11/13 09:30:50 $
+ * $Revision: 1.4 $
+ * $Date: 2011/02/12 09:43:19 $
  * $Author: jost $
  *
  * Copyright (c) by Heiner Jostkleigrewe
@@ -9,7 +9,10 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log: LehrgangImpl.java,v $
- * Revision 1.3  2010/11/13 09:30:50  jost
+ * Revision 1.4  2011/02/12 09:43:19  jost
+ * Statische Codeanalyse mit Findbugs
+ *
+ * Revision 1.3  2010-11-13 09:30:50  jost
  * Warnings entfernt.
  *
  * Revision 1.2  2010-10-15 09:58:28  jost
@@ -100,7 +103,7 @@ public class LehrgangImpl extends AbstractDBObject implements Lehrgang
 
   public void setMitglied(int mitglied) throws RemoteException
   {
-    setAttribute("mitglied", new Integer(mitglied));
+    setAttribute("mitglied", Integer.valueOf(mitglied));
   }
 
   public Lehrgangsart getLehrgangsart() throws RemoteException
@@ -110,7 +113,7 @@ public class LehrgangImpl extends AbstractDBObject implements Lehrgang
 
   public void setLehrgangsart(int lehrgangsart) throws RemoteException
   {
-    setAttribute("lehrgangsart", new Integer(lehrgangsart));
+    setAttribute("lehrgangsart", Integer.valueOf(lehrgangsart));
   }
 
   public Date getVon() throws RemoteException
