@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /home/xubuntu/berlios_backup/github/tmp-cvs/jverein/Repository/jverein/src/de/jost_net/JVerein/server/ZusatzbetragImpl.java,v $
- * $Revision: 1.6 $
- * $Date: 2010/11/25 19:34:04 $
+ * $Revision: 1.7 $
+ * $Date: 2011/02/12 09:43:37 $
  * $Author: jost $
  *
  * Copyright (c) by Heiner Jostkleigrewe
@@ -9,7 +9,10 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log: ZusatzbetragImpl.java,v $
- * Revision 1.6  2010/11/25 19:34:04  jost
+ * Revision 1.7  2011/02/12 09:43:37  jost
+ * Statische Codeanalyse mit Findbugs
+ *
+ * Revision 1.6  2010-11-25 19:34:04  jost
  * Bugfix bei Zusatzbeträgen ohne Intervall
  *
  * Revision 1.5  2010-11-13 09:31:24  jost
@@ -173,7 +176,7 @@ public class ZusatzbetragImpl extends AbstractDBObject implements Zusatzbetrag
 
   public void setMitglied(int mitglied) throws RemoteException
   {
-    setAttribute("mitglied", new Integer(mitglied));
+    setAttribute("mitglied", Integer.valueOf(mitglied));
   }
 
   public Date getFaelligkeit() throws RemoteException
@@ -290,7 +293,7 @@ public class ZusatzbetragImpl extends AbstractDBObject implements Zusatzbetrag
           return false;
         }
       }
-      else 
+      else
       {
         // ja: nicht mehr ausführen
         return false;
