@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /home/xubuntu/berlios_backup/github/tmp-cvs/jverein/Repository/jverein/src/de/jost_net/JVerein/server/ZusatzfelderImpl.java,v $
- * $Revision: 1.7 $
- * $Date: 2010/11/13 09:31:24 $
+ * $Revision: 1.8 $
+ * $Date: 2011/02/12 09:43:37 $
  * $Author: jost $
  *
  * Copyright (c) by Heiner Jostkleigrewe
@@ -9,7 +9,10 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log: ZusatzfelderImpl.java,v $
- * Revision 1.7  2010/11/13 09:31:24  jost
+ * Revision 1.8  2011/02/12 09:43:37  jost
+ * Statische Codeanalyse mit Findbugs
+ *
+ * Revision 1.7  2010-11-13 09:31:24  jost
  * Warnings entfernt.
  *
  * Revision 1.6  2010-10-15 09:58:27  jost
@@ -42,6 +45,7 @@ import de.jost_net.JVerein.keys.Datentyp;
 import de.jost_net.JVerein.rmi.Felddefinition;
 import de.jost_net.JVerein.rmi.Mitglied;
 import de.jost_net.JVerein.rmi.Zusatzfelder;
+import de.jost_net.JVerein.util.JVDateFormatTTMMJJJJ;
 import de.willuhn.datasource.db.AbstractDBObject;
 import de.willuhn.logging.Logger;
 
@@ -116,7 +120,7 @@ public class ZusatzfelderImpl extends AbstractDBObject implements Zusatzfelder
 
   public void setMitglied(int mitglied) throws RemoteException
   {
-    setAttribute("mitglied", new Integer(mitglied));
+    setAttribute("mitglied", Integer.valueOf(mitglied));
   }
 
   public Felddefinition getFelddefinition() throws RemoteException
@@ -126,7 +130,7 @@ public class ZusatzfelderImpl extends AbstractDBObject implements Zusatzfelder
 
   public void setFelddefinition(int felddefinition) throws RemoteException
   {
-    setAttribute("felddefinition", new Integer(felddefinition));
+    setAttribute("felddefinition", Integer.valueOf(felddefinition));
   }
 
   public String getFeld() throws RemoteException
@@ -182,7 +186,7 @@ public class ZusatzfelderImpl extends AbstractDBObject implements Zusatzfelder
 
   public Boolean getFeldJaNein() throws RemoteException
   {
-    return new Boolean(Util.getBoolean(getAttribute("feldjanein")));
+    return Util.getBoolean(getAttribute("feldjanein"));
   }
 
   public void setFeldJaNein(Boolean janein) throws RemoteException
@@ -207,7 +211,7 @@ public class ZusatzfelderImpl extends AbstractDBObject implements Zusatzfelder
         case Datentyp.DATUM:
           if (getFeldDatum() != null)
           {
-            return Einstellungen.DATEFORMAT.format(getFeldDatum());
+            return new JVDateFormatTTMMJJJJ().format(getFeldDatum());
           }
           else
           {
